--make selected ip ptz preset more visible (brightter background), fix another brain failure (lib did not filter post correctly)

--- a/www/template/styles.css
+++ b/www/template/styles.css
@@ -249,9 +249,9 @@ second
 #storageForm label		{ padding:3px; margin-right:15px; }
 
 /*ip-ptz-presets*/
-#ipPtzPresets .preset { height:25px; border:1px dotted #eee; line-height:25px; vertical-align:middle; margin-top:3px; padding:1px 1px 1px 5px; }
+#ipPtzPresets .preset { height:27px; border:1px dotted #eee; line-height:27px; vertical-align:middle; margin-top:3px; padding:1px 1px 1px 5px; }
 #ipPtzPresets .preset:hover { background-color:#fafafa; cursor:pointer; }
-#ipPtzPresets .preset#selected { background-color:#efe; }
+#ipPtzPresets .preset#selected { background-color:#252; color:white; }
 #ipPtzPresets .preset .name { float:left; }
 #ipPtzPresets .preset #pButton { width:25px; height:25px; float:right; background-position:center center; background-repeat:no-repeat;}
 #ipPtzPresets .preset #pButton.delete {  border:1px solid #955; background-color: #fee; background-image:url("/img/icons/cross.png");  }
